# AutoBookmark2

./: README.md  app.py  main.py  pyproject.toml  replit.nix
AutoBookmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
